// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthenticationProviderInformation />  renders correctly when AMR is helsinkiAccountAMR should render helsinki account information as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <ProfileSection>
    <section
      className="content-box profile-section"
    >
      <div
        className="flex-box-columns"
      >
        <div
          className="editor-description-container"
        >
          <h2>
            profileInformation.authenticationMethod
          </h2>
          <span
            className="text-value"
          >
            identityProvider.helsinkiAccount
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</AuthenticationProviderInformation>
`;

exports[`<AuthenticationProviderInformation />  renders correctly when AMR is tunnistusSuomifiAMR should render suomi.fi information as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <ProfileSection>
    <section
      className="content-box profile-section"
    >
      <div
        className="flex-box-columns"
      >
        <div
          className="editor-description-container"
        >
          <h2>
            profileInformation.authenticationMethod
          </h2>
          <span
            className="text-value"
          >
            identityProvider.tunnistusSuomifi
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</AuthenticationProviderInformation>
`;
